envoy-config/production-envoy.yaml
tracing:
  http:
    name: envoy.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: jaeger
      collector_endpoint: "/api/v1/spans"
      shared_span_context: false
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
stats_sinks:
  -
    name: envoy.statsd
    config:
      tcp_cluster_name: statsdexporter
      prefix: graphql    
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
              format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
          tracing:
            operation_name: ingress
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: ingress_route
            virtual_hosts:
            - name: local
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                  timeout: 60s
                decorator:
                  operation: queryGraphQL
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          tracing:
            operation_name: egress
          codec_type: auto
          stat_prefix: egress_http
          route_config:
            name: egress_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/api/history"
                route:
                  cluster: batchinsight
                decorator:
                  operation: getHistory
              - match:
                  prefix: "/api/batchquery"
                route:
                  cluster: batchquery
                decorator:
                  operation: batchQuery
              - match:
                  prefix: "/api/collection"
                route:
                  cluster: collector
                decorator:
                  operation: collectExhaust
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: statsdexporter
    type: strict_dns
    connect_timeout: 0.250s
    lb_policy: round_robin
    hosts:
      - socket_address:
          protocol: TCP
          address: statsdexporter
          port_value: 9125
  - name: local_service
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 3000
  - name: digitalexhaust
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: digitalexhaust
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: digitalexhaust.ezesoft.net
                port_value: 443
    tls_context:
      sni: digitalexhaust.ezesoft.net
  - name: batchinsight
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: batchinsight
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: batchinsight
                port_value: 80
  - name: batchquery
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: batchquery
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: batchquery
                port_value: 80
  - name: collector
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: collector
                port_value: 80
  - name: jaeger
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
